<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoweTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="select_bt_hint">BT:</string>
    <string name="select_bt">设BT</string>
    
    
    <string name="select_mifi_hint">启用Mifi设备：</string>
    <string name="select_mifi">设Mifi</string>

    <string name="sim_range">SIM范围: </string>
    <string name="sim_start">起始: </string>
    <string name="sim_current">当前: </string>
    <string name="start_client">启动任务</string>
    <string name="bt_paired_devices">已配对设备:</string>
    <string name="bt_other_devices">其他设备：</string>
    <string name="bt_scan">扫描</string>
    <string name="bt_devices">蓝牙设备：</string>
    <string name="bt_choose_devices">选择设备</string>
    
    <string name="log">日志：</string>
    <string name="ok">确定</string>
    <string name="server">服务器:</string>
    <string name="server_status">服务状态：</string>
    <string name="stop_server">停止任务</string>
    <string name="start_server">启动任务 </string>
    
    <string name="view_log">查看日志</string>
    <string name="card_group0">卡组0</string>
    <string name="card_group1">卡组1</string>
    <string name="range">范围：</string> 
    <string name="card_seperator">~</string> 
    <string name="card_init_start">0</string> 
    <string name="card_init_end">256</string> 
    <string name="curr_sim">当前SIM卡:  </string> 
    <string name="view_props">看属性</string> 
    <string name="tasks">任务</string> 
    <string name="emulate_info">模拟信息：</string> 
    <string name="empty"></string> 
    <string name="falseSlotInfo">切卡失败卡槽索引 (序号从1开始):</string>
    <string name="falseTaskInfo">任务失败卡槽索引 (序号从1开始):</string>
    <string name="clear_log">清除日志</string>
    <string name="reset_modem">重启SIM</string>
    <string name="execute_script">执行脚本</string>
    <string name="select_4g_hint">启用4G</string>
    <string name="select_test_hint">测试服务器</string>
    <string name="select_wifi_hint">WiFi设备：</string>
    <string name="select_wifi">设Wifi</string>
    <string name="setup_params">设参数</string>
    <string name="params">参数:</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="phone_seq">手机编号:</string>
    <string name="pool_seq">卡池编号:</string>
    <string name="slot_seq_rules">卡槽编号规则([空槽数]-卡槽1-[空槽数]-卡槽2...)不连续卡槽加空格区分</string>
    <string name="slot_seqs">卡槽编号:</string>
    <string name="log_to_file">记录日志文件</string>
    <string name="auto_start">自动启动</string>
    <string name="check_version">检查版本</string>
    <string name="select_vpn_hint">启用VPN</string>
    <string name="select_vpn">设VPN</string>
    
    <string name="specify_vpn">指定VPN</string>
    <string name="test_vpn">测试VPN</string>
    <string name="vpn_server">服务器地址：</string>
    <string name="vpn_username">登陆用户：</string>
    <string name="vpn_password">登陆密码：</string>
    <string name="vpn_dns">DNS：</string>
    <string name="vpn_ppe">加密</string>
    <string name="vpn_name">名称</string>
    <string name="vpn_city">城市</string>
    
    <string name="select_no_sim_hint">无SIM卡池</string>
    <string name="nosim_vdevice_num">无卡任务虚拟设备数目</string>
    <string name="nosim_start">无卡起始值</string>
    <string name="overseas">海外</string>
    
    <string name="start_verify_cards">卡槽验证</string>
    <string name="stop_verify_cards">停止验证</string>
    <string name="successTaskInfo">成功任务：</string>
    <string name="start_mark_cards">卡槽标记</string>
    <string name="stop_mark_cards">停止标记</string>
    <string name="select_title">选择执行类型</string>
    <string name="switch_specifiy_card1">切换到指定卡(按卡槽)</string>
    <string name="switch_specifiy_card2">切换到指定卡(按索引)</string>
    <string name="input_slot_seq">输入卡槽编号</string>
    <string name="input_sim_seq">输入SIM卡编号</string>
    <string name="input_sim_index">输入SIM卡索引</string>
    <string name="invalid_params">输入参数不合法!</string>
    
    <string name="important_hint">重要提示!</string>
    <string name="mark_card_notice">标记卡槽将更新强制更新当前SIM卡和卡槽状态</string>
    <string name="ime_wait_time">输入法等待时间（单位：秒）</string>
    <string name="ocr_english_text">OCR英文</string>
    <string name="ocr_chinese_text">OCR中文</string>
    
    <string name="extend_functions">扩展功能</string>
    <string name="random_emulation">随机模拟设备信息</string>
    <string name="random_emulation_hint">将要产生如下随机模拟信息：</string>
    <string name="report_ip">汇报IP</string>
    <string name="input_package_name">请输入APP包名:</string>
    <string name="read_specific_dir">读取%s目录内容</string>
    
    <string name="turnon_vpn">打开VPN</string>
    <string name="turnoff_vpn">关闭VPN</string>
</resources>
