<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_slot_seq"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    <EditText
           android:id="@+id/etInputSlotSeq"
           android:layout_width="80dp"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:text="@string/empty" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_sim_seq"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    <EditText
           android:id="@+id/etInputSimSeq"
           android:layout_width="80dp"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:text="@string/empty" />
</LinearLayout>
